[gd_scene load_steps=2 format=3 uid="uid://bu4o4rypkclcr"]

[ext_resource type="Script" path="res://Scenes/BirdPerch.gd" id="1_c045a"]

[node name="BirdPerch" type="Area2D"]
position = Vector2(291, 61)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_c045a")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
